--- a/package.json
+++ b/package.json
@@ -9,12 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^12.23.24",
+    "@sanity/client": "^7.12.1",
+    "@sanity/icons": "^3.7.4",
+    "@sanity/image-url": "^1.2.0",
+    "@sanity/vision": "^4.22.0",
+    "framer-motion": "^12.23.26",
+    "lucide-react": "^0.553.0",
     "next": "^14.2.2",
+    "next-sanity": "^11.6.12",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
-    "react-tilt": "^1.0.2"
+    "react-simple-typewriter": "^5.0.1",
+    "react-tilt": "^1.0.2",
+    "react-tsparticles": "^2.12.2",
+    "react-type-animation": "^3.2.0",
+    "react-typed": "^2.0.12",
+    "sanity": "^4.22.0",
+    "styled-components": "^6.1.19",
+    "tsparticles": "^3.9.1"
   },
   "devDependencies": {
     "@types/node": "^20",
